# Higgs_fit

./: .gitignore  README.md  batch_fit.py  cli.py  config.py  constants.py  data_loader.py  entropy.py  file_parser.py  fit.py  list_data.py  make_toy.py  models.py  phangs_fit.py  phangs_loader.py  phangs_model.py  pyproject.toml  requirements.txt  stats.py  sweeps.py  test_sensitivity.py  toy.csv
.claude/: settings.local.json
.github/workflows/: test.yml
results/: grid_results.csv  summary_results.csv
tests/: test_fit.py  test_phangs.py
